--- a/Styles/shows.css
+++ b/Styles/shows.css
@@ -681,7 +681,7 @@ tablet px range */
 @media screen and (min-width: 768px) {
   .iframe {
     padding: 4rem 0 0 0;
-    width: 38rem;
+    width: 30rem;
     height: 14.5rem;
   }
 }
